--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "sass-loader": "^7.1.0",
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
+    "velocity-animate": "^2.0.5",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
+    "vue2-animate": "^2.1.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
