--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "eslint-plugin-vue": "^4.7.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "google-palette": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
+    "url-loader": "^1.1.2",
     "velocity-animate": "1.5.2",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
