--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "google-palette": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
+    "multi-loader": "^0.1.0",
     "node-sass": "^4.10.0",
     "require": "^2.4.20",
     "sass-loader": "^7.1.0",
