--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "npm": "^6.5.0",
     "style-loader": "^0.23.1",
     "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6",
@@ -48,6 +49,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
     "vue2-animate": "^2.1.0",
+    "vue2-touch-events": "^1.1.1",
     "webp-loader": "^0.4.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
