--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-extract-css-hot-reload": "^1.0.3",
-    "webpack-merge": "^4.1.5"
+    "webpack-merge": "^4.1.5",
+    "workbox-webpack-plugin": "^3.6.3"
   }
 }
