--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "webpack-dev-server": "^3.1.10",
     "webpack-extract-css-hot-reload": "^1.0.3",
     "webpack-merge": "^4.1.5",
+    "webpack-pwa-manifest": "^4.0.0",
     "workbox-webpack-plugin": "^3.6.3"
   }
 }
